--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -308,6 +308,7 @@ a {
       // outline: 1px solid $color-2FA7BE;
       // outline-offset: 3px;
     }
+
     &:hover {
       color: #56693e;
       border-color: #56693e;
@@ -315,6 +316,7 @@ a {
       box-shadow: none;
       // background-color: #fff;
     }
+
     &:active {
       // color: white;
       // background-color: #000;
@@ -10812,7 +10814,7 @@ a {
           grid-column: 2 span;
           position: relative;
           
-          @media (max-width: 1512px) {
+          @media (max-width: 1560px) {
             aspect-ratio: 538/300;
           }
 
@@ -10828,7 +10830,7 @@ a {
             border-radius: 10px;
             display: block;
 
-            @media (max-width: 1512px) {
+            @media (max-width: 1560px) {
               object-fit: cover;
               width: 100%;
               height: 100%;
@@ -11695,15 +11697,15 @@ a {
         padding: 80px 104px;
 
         @media (max-width: 1560px) {
-          padding: 105px 116px;
+          padding: 15px 116px;
         }
       
         @media (max-width: 1300px) {
-          padding: 80px 30px;
+          padding: 20px 30px;
         }
       
         @media (max-width: 560px) {
-          padding: 80px 15px;
+          padding: 100px 15px;
         }
 
         .regions__container {
@@ -11714,7 +11716,9 @@ a {
             min-width: 0;
             overflow: hidden;
 
-            @media (max-width: 1750px) {
+            @media (max-width: 1300px) {
+              overflow: initial;
+
               // padding: 103px 0 89px;
             }
 
@@ -11722,18 +11726,19 @@ a {
               // padding: 110px 0 89px;
             }
             .regions__title {
-              max-width: 1712px;
-              width: 100%;
-              text-align: left;
+              // max-width: 1712px;
+              // width: 100%;
+              // text-align: left;
               margin: 0;
               margin-bottom: 42px;
 
               @media (max-width: 1750px) {
-                max-width: 1280px;
+                // max-width: 1280px;
               }
 
-              @media (max-width: 1400px) {
-                padding: 0 30px;
+              @media (max-width: 1560px) {
+                // padding: 0 30px;
+
               }
 
               @media (max-width: 960px) {
@@ -11741,15 +11746,15 @@ a {
               }
 
               @media (max-width: 660px) {
-                padding: 0 15px;
+                // padding: 0 15px;
                 margin: 0 auto 38px;
               }
             }
 
             .regions__list {
-              max-width: 1920px;
-              margin: 0;
-              height: max-content;
+              // max-width: 1920px;
+              // margin: 0;
+              // height: max-content;
 
               .regions__item {
                 position: relative;
@@ -11769,13 +11774,18 @@ a {
                 );
                 border-radius: 10px;
 
+                @media (max-width: 1560px) {
+                  min-height: 300px;
+                  padding: 30px;
+                }
+
                 @media (max-width: 960px) {
                   min-height: 262px;
                   max-width: 360px;
                   padding: 30px;
                 }
 
-                @media (max-width: 660px) {
+                @media (max-width: 800px) {
                   padding: 20px;
                   max-width: 335px;
                 }
@@ -11973,6 +11983,15 @@ a {
               gap: 20px;
               align-items: center;
 
+              @media (max-width: 1300px) {
+                gap: 10px;
+              }
+
+              @media (max-width: 560px) {
+                top: -5px;
+
+              }
+
               .swiper-button {
                 position: relative;
                 width: 56px;
@@ -11982,6 +12001,11 @@ a {
                 left: initial;
                 bottom: initial;
                 margin: 0;
+
+                @media (max-width: 1300px) {
+                  width: 45px;
+                  height: 45px;
+                }
 
                 & svg {
                   width: 56px;
@@ -12004,10 +12028,10 @@ a {
       }
 
       .geo {
-        padding: 0 104px 100px;
+        padding: 20px 104px 100px;
 
           @media (max-width: 1560px) {
-            padding: 0 116px 100px;
+            padding: 95px 116px 100px;
           }
 
           @media (max-width: 1300px) {
@@ -12021,23 +12045,29 @@ a {
         .geo__container {
           .geo__wrap {
             display: grid;
-            grid-template-columns: 544px 1fr;
-            grid-template-rows: 48px 88px 20px 800px;
+            // grid-auto-flow: row;
+            grid-template-columns: 1fr 796px;
+            // grid-template-rows: 48px 88px 20px 800px;
             gap: 22px;
 
-            @media (max-width: 1512px) {
-              grid-template-rows: 48px 88px 20px 758px;
+            @media (max-width: 1660px) {
+              grid-template-columns: 1fr 600px;
+              // grid-template-rows: auto auto auto;
               gap: 20px 75px;
             }
 
-            @media (max-width: 1250px) {
+            @media (max-width: 1400px) {
               grid-template-columns: 1fr;
-              grid-template-rows: auto minmax(86px, auto) auto 758px;
+              grid-auto-flow: row;
+              gap: 13px;
             }
 
-            @media (max-width: 660px) {
-              grid-template-columns: 1fr;
-              grid-template-rows: auto minmax(120px, auto) auto 484px;
+            @media (max-width: 560px) {
+              gap: 20px;
+            }
+
+            .geo__title {
+              color: #363636;
             }
 
             .geo__desc {
@@ -12049,8 +12079,19 @@ a {
               text-align: left;
               color: #616161;
 
-              @media (max-width: 660px) {
+              @media (max-width: 1300px) {
+                max-width: 100%;
+
                 // line-height: 19.4px;
+              }
+
+              @media (max-width: 560px) {
+                //styleName: mobile/body;
+                font-family: Inter;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 19.6px;
+                text-align: left;
               }
             }
 
@@ -12061,17 +12102,30 @@ a {
               max-width: 800px;
               justify-self: end;
               display: grid;
-              grid-template-columns: repeat(3, minmax(100px, 314px));
+              grid-template-columns: repeat(3, minmax(100px, 1fr));
               gap: 20px;
+              align-content: start;
 
-              @media (max-width: 1250px) {
-                grid-column: initial;
-                grid-row: initial;
-                justify-self: center;
+
+              @media (max-width: 1560px) {
+                padding-top: 40px;
+                gap: 10px;
+              }
+              
+              @media (max-width: 1400px) {
+                grid-area: initial;
+                margin-bottom: 10px;
+                // grid-row: initial;
+                justify-self: initial;
+                max-width: 100%;
+                padding-top: 27px;
+              // grid-template-columns: repeat(3, minmax(100px, 1fr));
+
+
               }
 
               @media (max-width: 960px) {
-                margin-bottom: 40px;
+                // margin-bottom: 40px;
               }
 
               @media (max-width: 560px) {
@@ -12091,11 +12145,12 @@ a {
                 gap: 15px 17px;
                 padding: 31px 53px;
                 width: 100%;
-                height: 100%;
+                min-height: 140px;
+                // height: 100%;
                 border: 1px solid #ededed;
                 border-radius: 5px;
 
-                @media (max-width: 1512px) {
+                @media (max-width: 1560px) {
                   gap: 0 17px;
                   box-sizing: border-box;
                   padding: 30px;
@@ -12103,11 +12158,16 @@ a {
 
                 @media (max-width: 960px) {
                   padding: 23px;
+                  min-height: 150px;
+
                 }
 
                 @media (max-width: 560px) {
-                  width: 100%;
                   padding: 19px;
+                  grid-template: auto auto / 7fr 5fr;
+                  gap: 0 15px;
+                  min-height: 116px;
+
                 }
 
                 .geo__advantages-title {
@@ -12118,6 +12178,14 @@ a {
                   text-align: right;
                   color: #000000;
                   white-space: nowrap;
+
+                  @media (max-width: 560px) {
+                    font-family: Inter;
+                    font-size: 18px;
+                    font-weight: 500;
+                    line-height: 21.78px;
+
+                  }
                 }
                 .geo__advantages-icon {
                 }
@@ -12135,18 +12203,30 @@ a {
             }
 
             .geo__map {
+              margin-top: 35px;
               position: relative;
               width: 100%;
               height: 100%;
               border: 1px solid #ededed;
               grid-column: 2 span;
-              grid-row: 4 / 5;
+              // grid-row: 4 / 5;
               border-radius: 10px;
               overflow: hidden;
+              height: 800px;
 
-              @media (max-width: 1250px) {
+              @media (max-width: 1560px) {
+                height: 755px;
+              }
+
+              @media (max-width: 1400px) {
                 grid-column: initial;
                 grid-row: initial;
+              }
+
+              @media (max-width: 560px) {
+                margin-top: 0;
+                height: 484px;
+
               }
 
               .map__container {
@@ -12201,17 +12281,31 @@ a {
                 display: grid;
                 grid-auto-flow: row;
                 align-content: start;
+                transition: opacity 0.8s ease 0s, visibility 0.8s ease 0s;
 
-                @media (max-width: 1512px) {
+                @media (max-width: 1560px) {
                   top: 40px;
                   left: 40px;
+                  bottom: 40px;
                   padding: 40px;
                   max-width: 425px;
                 }
 
                 @media (max-width: 960px) {
                   opacity: 0;
-                  visibility: hidden;
+                  visibility: hidden;                  
+                  top: initial;
+                  left: 0;
+                  right: 0;
+                  bottom: 0;
+                  max-width: initial;
+                  padding: 30px;
+                  gap: 110px;
+                }
+
+                &.map__mark-list-wrap_active {
+                  opacity: 1;
+                  visibility: visible;  
                 }
 
                 .map__title {
@@ -12222,11 +12316,18 @@ a {
                   line-height: 30.26px;
                   text-align: left;
                   color: #000;
+
+                  @media (max-width: 960px) {
+                    display: none;
+  
+                  }
                 }
+
                 .map__mark-list {
                   display: grid;
                   grid-auto-flow: row;
                   gap: 20px;
+
                   .map__mark-item {
                     display: grid;
                     // grid-auto-flow: column;
@@ -12251,8 +12352,9 @@ a {
                     font-weight: 400;
                     line-height: 24.2px;
                     text-align: left;
-                    color: rgba(#000, 0.6);
+                    color: #333333;
                     cursor: pointer;
+                    opacity: 0.6;
 
                     .map__mark-icon {
                       & svg circle {
@@ -12276,13 +12378,75 @@ a {
                     }
 
                     &_active {
-                      color: rgba(#000, 1);
+                      opacity: 1;
+                      // color: rgba(#000, 1);
 
                       & svg path {
-                        fill: #000000;
+                        fill: #fff;
+                        stroke: #fff;
+                      }
+
+                      & svg clipPath {
+                        fill: blue;
+
+                      }
+
+                      & svg circle {
+                        fill: #748D55;
                       }
                     }
                   }
+                }
+              }
+
+              .btn-wrap {
+                display: grid;
+                grid-auto-flow: column;
+                grid-template: 1fr / 1fr 1fr;
+                gap: 15px;
+                display: none;
+
+                @media (max-width: 960px) {
+                  display: grid;
+
+                }
+
+                
+                .map__menu-btn-apply {
+                  min-height: 54px;             
+
+                }
+
+                .map__menu-btn-reset {
+                  min-height: 54px;               
+                  max-width: 100%;
+                }
+              }
+
+              .map__menu-btn-filters {
+                padding: 16px 16px;
+                width: initial;
+                max-width: initial;
+                min-height: 59px;
+                display: none;
+                opacity: 1;
+                border: 1px solid #EDEDED;
+
+                @media (max-width: 960px) {
+                  display: grid;
+                  position: absolute;
+                  left: 30px;
+                  right: 30px;
+                  bottom: 30px;
+                }
+
+                @media (max-width: 560px) {
+                  width: initial;
+                  left: 10px;
+                  right: 10px;
+                  bottom: 10px;
+                  min-height: 49px;
+
                 }
               }
             }
@@ -12328,7 +12492,6 @@ a {
               }
             }
             .commercial__list {
-              grid-column: 3 span;
               min-width: 0;
               height: max-content;
 
