--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12742,15 +12742,15 @@ a {
         padding: 63px 104px 65px;
 
           @media (max-width: 1560px) {
-            padding: 63px 116px 65px;
+            padding: 63px 116px 75px;
           }
 
           @media (max-width: 1300px) {
-            padding: 63px 30px 65px;
+            padding: 0px 30px 20px;
           }
 
           @media (max-width: 560px) {
-            padding: 63px 15px 65px;
+            padding: 15px 15px 65px;
           }
 
         .buy__container {
@@ -12759,6 +12759,10 @@ a {
             display: grid;
             grid-auto-flow: row;
             gap: 30px;
+
+            @media (max-width: 560px) {
+              gap: 20px;
+            }
 
             .buy__title {
             }
@@ -12770,6 +12774,22 @@ a {
 
               gap: 20px;
 
+              @media (max-width: 1560px) {
+                gap: 10px;
+
+              }
+
+              @media (max-width: 960px) {
+                grid-auto-columns: 1fr;
+
+              }
+
+              @media (max-width: 560px) {
+                grid-auto-flow: row;
+
+
+              }
+
               .buy__item {
                 display: grid;
                 grid-auto-flow: row;
@@ -12780,9 +12800,52 @@ a {
                 min-height: 225px;
                 background: #ffffff;
                 border-radius: 5px;
+                
+                @media (max-width: 1560px) {
+                  max-width: 346px;
+                  gap: 20px;
+
+                }
+
+                @media (max-width: 960px) {
+                  max-width: 100%;
+                }
+
+                
+                @media (max-width: 560px) {
+                  padding: 20px;
+                  min-height: initial;
+
+                }
+
                 .buy__item-title {
+                  //styleName: н3;
+                  font-family: Inter;
+                  font-size: 25px;
+                  font-weight: 400;
+                  line-height: 30.26px;
+                  text-align: left;
+
+                  @media (max-width: 960px) {
+                    //styleName: н4;
+                    font-family: Inter;
+                    font-size: 18px;
+                    font-weight: 400;
+                    line-height: 27px;
+                    text-align: left;
+
+                  }
                 }
                 .buy__item-text {
+
+                  @media (max-width: 560px) {
+                    //styleName: mobile/body;
+                    font-family: Inter;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 19.6px;
+                    text-align: left;
+                  }
                 }
               }
             }
@@ -12792,18 +12855,18 @@ a {
 
       .bot {
         background: #363636;
-        padding: 110px 104px 40px;
+        padding: 110px 104px 100px;
 
           @media (max-width: 1560px) {
-            padding: 110px 116px 40px;
+            padding: 85px 116px 80px;
           }
 
           @media (max-width: 1300px) {
-            padding: 110px 30px 40px;
+            padding: 60px 30px 0;
           }
 
           @media (max-width: 560px) {
-            padding: 110px 15px 40px;
+            padding: 60px 15px 60px;
           }
 
         .bot__container {
@@ -12812,17 +12875,34 @@ a {
             // width: 100%;
             // height: 100%;
             grid-template-columns: 460px 1fr;
-            grid-template-rows: 479px;
             align-items: center;
             justify-content: space-between;
             // padding: 25px 0;
             gap: 0 20px;
+
+            @media (max-width: 1560px) {
+              gap: 0 10px;
+            }
+
+            @media (max-width: 960px) {
+              grid-template-columns: 368px 1fr;
+            }
+
+            @media (max-width: 760px) {
+              grid-template-columns: 1fr;
+              gap: 10px;
+
+            }
 
             .bot__map {
               width: 100%;
               height: 100%;
               border-radius: 10px;
               overflow: hidden;
+
+              @media (max-width: 560px) {
+                height: 463px;
+              }
 
               & img {
                 width: 100%;
@@ -12848,8 +12928,10 @@ a {
                 pointer-events: none;
               }
             }
+
             .bot__address {
             }
+
             .address {
               padding: 50px;
               width: 100%;
@@ -12861,18 +12943,72 @@ a {
               // height: 479px;
               background: #ffffff;
               border-radius: 10px;
+
+              @media (max-width: 960px) {
+                padding: 30px;
+
+              }
             }
+
             .address__title {
               margin-bottom: 7px;
+
+              
+              @media (max-width: 1560px) {
+                margin-bottom: 15px;
+
+              }
+
+              @media (max-width: 960px) {
+                margin-bottom: 10px;
+
+              }
+
+              @media (max-width: 560px) {
+                margin-bottom: 15px;
+
+              }
             }
+
             .address__desc {
               margin-bottom: 60px;
+
+              @media (max-width: 960px) {
+                margin-bottom: 43px;
+
+
+              }
+
+              @media (max-width: 560px) {
+                //styleName: mobile/body;
+                font-family: Inter;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 19.6px;
+                text-align: left;
+                margin-bottom: 30px;
+              }
             }
+
             .address__wrapper {
               display: grid;
               grid-template: 1fr 1fr / auto 1fr;
               gap: 30px 40px;
               margin-bottom: 60px;
+
+              @media (max-width: 960px) {
+                grid-template: 1fr 1fr / 1fr;
+                margin-bottom: 40px;
+
+              }
+
+              @media (max-width: 560px) {
+                grid-template: 1fr 1fr / 1fr;
+                margin-bottom: 40px;
+                gap: 20px;
+                margin-bottom: 30px;
+
+              }
 
               .address__item {
                 display: grid;
@@ -12886,6 +13022,15 @@ a {
                   line-height: 16.94px;
                   text-align: left;
                   color: #616161;
+
+                  @media (max-width: 560px) {
+                    font-family: Inter;
+                    font-size: 13px;
+                    font-weight: 400;
+                    line-height: 15.73px;
+                    text-align: left;
+
+                  }
                 }
                 .address__item-text {
                   font-family: Inter;
@@ -12898,6 +13043,12 @@ a {
 
                 &.address__item_address {
                   grid-column: 2 span;
+
+                  @media (max-width: 960px) {
+                    grid-column: initial;
+
+    
+                  }
                 }
               }
             }
